Small modifications to the demo.

--- a/static_files/demo/demo_texts/code.html
+++ b/static_files/demo/demo_texts/code.html
@@ -23,7 +23,7 @@
     <a href="http://restx.mulesoft.org/documented-javascript-component-example" target="_blank">JavaScript</a>.</p>
 
     <p>The component API is very small and easy to learn. RESTx comes with command line utilities that create a
-    ready-to-use component template in the language of your choice. You just need to fill in the blanks where.
+    ready-to-use component template in the language of your choice. You just need to fill in the blanks.
     To see how easy it is to start writing your own components, 
     <a href="http://restx.mulesoft.org/writing-your-own-components" target="_blank">click here</a> (opens in new window).</p>
 
