--- a/static_files/demo/demo_texts/code/GsearchComponent.html
+++ b/static_files/demo/demo_texts/code/GsearchComponent.html
@@ -21,7 +21,7 @@
     and even a link to the component's built-in
     <span onmouseover="linkHighlight('/code/GsearchComponent/doc');" onmouseout="stopLinkHighlight('/code/GsearchComponent/doc');" class="lref">documentation</span>.</p>
 
-    <p>A component can only be used after a configuration has been provided for it. When such a
+    <p>A component is generic, reusable code. To make it work for you, first a configuration has to be provided for it. When such a
     set of parameters has been presented to the server, a RESTful resource is created (please
     <a href="http://restx.mulesoft.org/about-restful-resources" target="_blank">see here</a> for more information about RESTful resources).
     Therefore, it is very important that the component tells us which parameters it requires in
