--- a/static_files/demo/start.html
+++ b/static_files/demo/start.html
@@ -113,8 +113,12 @@
 
     <hr>
     <center>
-        <div style="width:400px;background-color:#ffff00;border:1px #777777 dashed;padding:30px;">
-            <big><strong>Ready to see the demo? <a href="/static/demo/demo.html">Click here!</a></strong></big>
+        <div style="width:600px;background-color:#bbbbbb;border:1px #666666 dashed;padding:30px;font-size:1.2em;">
+            <strong>Ready to see the demo?</strong>
+            <noscript>
+                We are sorry, but you will need to enable JavaScript to properly see this demo.
+            </noscript>
+            <button style="width:180;height:65;font-size:1.2em;cursor:hand;" onClick="window.location='/static/demo/demo.html'"><b>Click here!</b></button>
         </div>
     </center>
 </body>
