Numerous changes to the JavaScript and even the resource creation form, so that it works better in the demo.

--- a/static_files/demo/demo_texts/root.html
+++ b/static_files/demo/demo_texts/root.html
@@ -5,6 +5,11 @@
 <body>
 <script src="/static/demo/script.js" type="text/javascript"></script>
 
+<script>
+    disableLinks([ "/code", "/meta/doc" ]);
+</script>
+
+
 <h2>Welcome to the RESTx demo: The server's home page</h2>
 <table cellspacing=10 cellpadding=10>
 <tr>
