--- a/static_files/demo/demo_texts/code.html
+++ b/static_files/demo/demo_texts/code.html
@@ -5,6 +5,10 @@
 <body>
 <script src="/static/demo/script.js" type="text/javascript"></script>
 
+<script>
+    disableLinks([ "Home", "/code/GsearchComponent" ])
+</script>
+
 <table cellspacing=10 cellpadding=10>
 <tr>
 <td valign=top style="border-right:1px dashed #444444;">
@@ -17,8 +21,12 @@
     <p>A component is a piece of stand-alone software, which performs a very specific function, such
     as accessing a database, a cloud service, a proprietary in-house API, etc. Components can also take
     advantage of RESTx and implement even complex data integration logic in just a few lines
-    of code. Writing custom components is very easy and can be done
-    in either <a href="http://restx.mulesoft.org/documented-java-component-example" target="_blank">Java</a>,
+    of code.</p>
+    
+    <p>Serious data integration work often requires custom code at some point. That is why RESTx
+    puts a lot of emphasis on making the writing of custom components as quick and easy as possible.
+    You even have a choice of languages for your own components: You can write them
+    either in <a href="http://restx.mulesoft.org/documented-java-component-example" target="_blank">Java</a>,
     <a href="http://restx.mulesoft.org/documented-python-component-example" target="_blank">Python</a> or server-side
     <a href="http://restx.mulesoft.org/documented-javascript-component-example" target="_blank">JavaScript</a>.</p>
 
