--- a/static_files/demo/demo_texts/code/GsearchComponent.html
+++ b/static_files/demo/demo_texts/code/GsearchComponent.html
@@ -5,6 +5,10 @@
 <body>
 <script src="/static/demo/script.js" type="text/javascript"></script>
 
+<script>
+    disableLinks([ "[ Create resource ]", "/code/GsearchComponent", "Home", "Code", "/code/GsearchComponent/doc", "/resource/_createResourceForm/form/GsearchComponent" ])
+</script>
+
 <table cellspacing=10 cellpadding=10>
 <tr>
 <td valign=top style="border-right:1px dashed #444444;">
