--- a/static_files/demo/demo_texts/code/GsearchComponent/doc.html
+++ b/static_files/demo/demo_texts/code/GsearchComponent/doc.html
@@ -4,6 +4,11 @@
 </head>
 <body>
 <script src="/static/demo/script.js" type="text/javascript"></script>
+
+<script>
+    disableLinks([ "Home", "Code", "GsearchComponent" ])
+</script>
+
 <table cellspacing=10 cellpadding=10>
 <tr>
 <td valign=top style="border-right:1px dashed #444444;">
