--- a/static_files/demo/demo_texts/resource/_createResourceForm/form/GsearchComponent.html
+++ b/static_files/demo/demo_texts/resource/_createResourceForm/form/GsearchComponent.html
@@ -5,9 +5,16 @@
 <body>
 <script src="/static/demo/script.js" type="text/javascript"></script>
 
+<script>
+    disableLinks([ ]);
+    disableClickById("resource_creation_params__specialized")
+    forceFieldValue("resource_creation_params__suggested_name", "restx_search_results", "Resource name");
+</script>
+
+
 <table cellspacing=10 cellpadding=10>
 <tr>
-<td valign=top style="border-right:1px dashed #444444;">
+<td id="content_cell" valign=top style="border-right:1px dashed #444444;">
     <h3>A form to create a new RESTful web service</h3>
     <p>What you see here is the form you fill in to create a new RESTful web service.
     Some elements of the form are the same for each component, since that is where you
@@ -45,7 +52,7 @@
     <span onmouseover="rowHighlight('default_search');" onmouseout="stopRowHighlight('default_search');" class="lref">default search</span> value.
     Please enter "RESTx" here, since that is the term we want to search for.</p>
 </td>
-<td valign=top width=350>
+<td id="next_cell" valign=top width=350>
     <h3>Next:</h3>
     <p>Do these steps in order:</p>
     <ol>
@@ -67,5 +74,54 @@
 </tr>
 </table>
 </body>
+<script>
+
+var interval;
+// Check whether an element has appeared in the frame, which
+// lets us know that the resource creation has succeeded.
+// If that's the case, we are completely updating the content
+// of the top frame.
+function createdChecker()
+{
+    if (getLinkByUrl("/resource/restx_search_results") != null) {
+        clearInterval(interval);
+        // The left cell with descriptions...
+        elem = document.getElementById("content_cell");
+        elem.innerHTML = " \
+    <h3>A new RESTful resource has been created</h3>  \
+    <p>Here you see the confirmation that your resource was  \
+    <span onmouseover=\"elemHighlight('status_value');\" onmouseout=\"stopElemHighlight('status_value');\" class=\"lref\">created successfully</span>.  \
+    You also receive the confirmation of the chosen  \
+    <span onmouseover=\"elemHighlight('name_value');\" onmouseout=\"stopElemHighlight('name_value');\" class=\"lref\">resource name</span>.  \
+    This is important, since the actual name of the created resources is up to the  \
+    server. The 'resource name' in the resource creation form is merely a suggestion.</p>  \
+  \
+    <p>Lastly, you get the  \
+    <span onmouseover=\"linkHighlight('/resource/###');\" onmouseout=\"stopLinkHighlight('/resource/###');\" class=\"lref\">URI of the RESTful resource</span>  \
+    you just created. That URI is all that a user of the new resource needs to know. Accessing it provides you with information about how to use the resource.</p>  \
+";
+        // The right cell with the next steps...
+        elem = document.getElementById("next_cell");
+        elem.innerHTML = " \
+    <h3>Next:</h3> \
+    <p>Click on the  \
+    <span onmouseover=\"linkHighlight('/resource/###');\" onmouseout=\"stopLinkHighlight('/resource/###');\" class=\"lref\">URI of the RESTful resource</span>. \
+";
+
+    }
+    else {
+        // Need to redo these settings here, since the frame is reloaded in case of
+        // problem during form submit. In that case, all those handlers get erased.
+        // Thus, I need to reapply them regularly.
+        disableLinks([ ]);
+        disableClickById("resource_creation_params__specialized")
+        forceFieldValue("resource_creation_params__suggested_name", "restx_search_results", "Resource name");
+    }
+}
+
+interval = setInterval(createdChecker, 500);
+
+</script>
+
 </html>
 
