--- a/static_files/demo/demo_texts/resource/restx_search_results.html
+++ b/static_files/demo/demo_texts/resource/restx_search_results.html
@@ -5,6 +5,10 @@
 <body>
 <script src="/static/demo/script.js" type="text/javascript"></script>
 
+<script>
+    disableLinks([ "/resource/restx_search_results/search" ]);
+</script>
+
 <table cellspacing=10 cellpadding=10>
 <tr>
 <td valign=top style="border-right:1px dashed #444444;">
