--- a/static_files/demo/demo_texts/code/DatabaseAccess/doc.html
+++ b/static_files/demo/demo_texts/code/DatabaseAccess/doc.html
@@ -6,7 +6,7 @@
 <script src="/static/demo/script.js" type="text/javascript"></script>
 
 <script>
-    disableLinks([ "Home", "Code", "GsearchComponent" ])
+    disableLinks([ "Home", "Code", "DatabaseAccess" ])
 </script>
 
 <div id="menu_div" style="width:100%;text-align:center;border-bottom:1px dashed #444444;">&nbsp;</div>
@@ -22,7 +22,7 @@
     <h3>Next:</h3>
     Navigate back to the information page of the component, using the breadcrumbs.
     Click on 
-    <span onmouseover="linkHighlight('GsearchComponent');" onmouseout="stopLinkHighlight('GsearchComponent');" class="lref">GsearchComponent</span>.
+    <span onmouseover="linkHighlight('DatabaseAccess');" onmouseout="stopLinkHighlight('DatabaseAccess');" class="lref">DatabaseAccess</span>.
 </td>
 </tr>
 </table>
