--- a/static_files/demo/demo_texts/code/GsearchComponent.html
+++ b/static_files/demo/demo_texts/code/GsearchComponent.html
@@ -9,6 +9,8 @@
     disableLinks([ "[ Create resource ]", "/code/GsearchComponent", "Home", "Code", "/code/GsearchComponent/doc", "/resource/_createResourceForm/form/GsearchComponent" ])
 </script>
 
+<div id="menu_div" style="width:100%;text-align:center;border-bottom:1px dashed #444444;">&nbsp;</div>
+
 <table cellspacing=10 cellpadding=10>
 <tr>
 <td valign=top style="border-right:1px dashed #444444;">
@@ -67,5 +69,7 @@
 </tr>
 </table>
 </body>
+<script>makeMenu();</script>
+
 </html>
 
