--- a/static_files/demo/demo_texts/resource/restx_search_results.html
+++ b/static_files/demo/demo_texts/resource/restx_search_results.html
@@ -9,6 +9,8 @@
     disableLinks([ "/resource/restx_search_results/search" ]);
 </script>
 
+<div id="menu_div" style="width:100%;text-align:center;border-bottom:1px dashed #444444;">&nbsp;</div>
+
 <table cellspacing=10 cellpadding=10>
 <tr>
 <td valign=top style="border-right:1px dashed #444444;">
@@ -44,5 +46,6 @@
 </tr>
 </table>
 </body>
+<script>makeMenu();</script>
 </html>
 
