--- a/static_files/demo/demo_texts/meta/doc.html
+++ b/static_files/demo/demo_texts/meta/doc.html
@@ -4,6 +4,8 @@
 </head>
 <body>
 <script src="/static/demo/script.js" type="text/javascript"></script>
+
+<div id="menu_div" style="width:100%;text-align:center;border-bottom:1px dashed #444444;">&nbsp;</div>
 <table cellspacing=10 cellpadding=10>
 <tr>
 <td valign=top style="border-right:1px dashed #444444;">
@@ -21,5 +23,7 @@
 </tr>
 </table>
 </body>
+<script>makeMenu();</script>
+
 </html>
 
