--- a/static_files/demo/demo_texts/resource/restx_search_results/search.html
+++ b/static_files/demo/demo_texts/resource/restx_search_results/search.html
@@ -5,6 +5,12 @@
 <body>
 <script src="/static/demo/script.js" type="text/javascript"></script>
 
+<script>
+    disableLinks([ "restx_search_results", "Home" ]);
+</script>
+
+<div id="menu_div" style="width:100%;text-align:center;border-bottom:1px dashed #444444;">&nbsp;</div>
+
 <table cellspacing=10 cellpadding=10>
 <tr>
 <td valign=top style="border-right:1px dashed #444444;">
@@ -33,6 +39,7 @@
     <h3>Next:</h3>
     <p>What would you like to do now?</p>
     <ul>
+        <li>You can learn about the important concept of <a href="#" onclick='parent.top.frames[2].document.location="/code/DatabaseAccess"'>specialized components</a>.</li>
         <li>You can <a href="/static/demo/demo.html" target="_top">start the demo again</a>.</li>
         <li>You can go to the <a href="http://restx.mulesoft.org" target="_top">RESTx web site</a> to find out more or
             download RESTx and try for yourself.</li>
@@ -44,5 +51,6 @@
 </tr>
 </table>
 </body>
+<script>makeMenu();</script>
 </html>
 
