--- a/static_files/demo/demo_texts/root.html
+++ b/static_files/demo/demo_texts/root.html
@@ -6,14 +6,15 @@
 <script src="/static/demo/script.js" type="text/javascript"></script>
 
 <script>
-    disableLinks([ "/code", "/meta/doc" ]);
+    disableLinks([ "/resource", "/code", "/meta/doc" ]);
 </script>
 
+<div id="menu_div" style="width:100%;text-align:center;border-bottom:1px dashed #444444;">&nbsp;</div>
 
-<h2>Welcome to the RESTx demo: The server's home page</h2>
 <table cellspacing=10 cellpadding=10>
 <tr>
 <td valign=top style="border-right:1px dashed #444444;">
+    <h2>Welcome to the RESTx demo: The server's home page</h2>
     <h3>RESTful API</h3>
     <p>RESTx provides a fully RESTful API. Everything the server has to offer can
     be explored simply by following links. The server's root URI is the only URI a client
@@ -48,5 +49,7 @@
 </tr>
 </table>
 </body>
+<script>makeMenu();</script>
+
 </html>
 
