Modified frame style.

--- a/static_files/demo/demo.html
+++ b/static_files/demo/demo.html
@@ -60,7 +60,7 @@ function startToMonitor() {
 //--></script>
 </head>
 
-<frameset rows="30%,4%,*" onLoad="startToMonitor()">
+<frameset border=3 framespacing=0 rows="30%,4%,*" onLoad="startToMonitor()">
 <frame src="/static/demo/demo_texts/root.html" name="frame0">
 <frame src="/static/demo/demo_texts/url.html" name="frame1" noresize>
 <frame src="/" name="frame2">
