--- a/static_files/demo/start.html
+++ b/static_files/demo/start.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>RESTx demo: The fastest way to create RESTful web services</title>
+    <title>Online demo shoing the fastest way to create RESTful web services</title>
     <style type="text/css"> 
     
         p {
@@ -75,18 +75,19 @@
 </head>
 <body>
 <a target="_blank" href="http://restx.mulesoft.org"><img border=0 style="padding-right:10px" width="97" height="30" src="/static/restx/images/restx_logo.png" alt="RESTx" /></a>
-    <big><strong><i>Welcome to the RESTx demo!</i></strong></big>
+    <big><strong>Welcome to the RESTx interactive demo!</strong></big>
+    <h3>An online demo showing the simple creation of RESTful web services and self-documenting RESTful APIs</h3>
     <hr>
     <h3>What is RESTx?</h3>
     <img src="/static/demo/RESTx_demo_small.png" align="right" />
-    <p>RESTx is a light-weight, open-source platform for the creation of RESTful web services, data access and
+    <p>RESTx is a light-weight, open-source platform for the creation of <a href="http://restx.mulesoft.org" target="_blank">RESTful web services</a>, data access and
        integration resources. It emphasizes simplicity, sane defaults and out-of-the-box usability. No complex
-       configuration, no steep learning curve. Find out more on the
+       configuration, no steep learning curve. After a small, compact download you will be up and running in less than 5 minutes. Find out more on the
        <a href="http://restx.mulesoft.org" target="_blank">RESTx project web site</a>.</p>
 
     <h3>Is it just another web application framework?</h3>
     <p>No! RESTx is specialized in the rapid creation of RESTful web services and resources. It differs
-       from traditional application framework in that code is organized in reusable components. These components
+       from traditional application frameworks in that code is organized in reusable components. These components
        are specialized pieces of code, providing one particular function such as database access, integration
        with a custom API, access to an SaaS service, etc. Writing custom components is very easy and can be done
        in either <a href="http://restx.mulesoft.org/documented-java-component-example" target="_blank">Java</a>,
@@ -113,7 +114,8 @@
         <div style="width:600px;background-color:#bbbbbb;border:1px #666666 dashed;padding:30px;font-size:1.2em;">
             <strong>Ready to see the demo?</strong>
             <noscript>
-                We are sorry, but you will need to enable JavaScript to properly see this demo.
+                We are sorry, but you will need to enable JavaScript to properly see this demo.<br>
+                <a href="/static/demo/demo.html">Start demo</a>
             </noscript>
             <button style="width:180;height:65;font-size:1.2em;cursor:hand;" onClick="window.location='/static/demo/demo.html'"><b>Click here!</b></button>
         </div>
