--- a/static_files/demo/start.html
+++ b/static_files/demo/start.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Online demo shoing the fastest way to create RESTful web services</title>
+    <title>Online demo showing the fastest way to create RESTful web services</title>
     <style type="text/css"> 
     
         p {
